A-lanlan/envoy-gateway/component/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-gateway
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: production-proxy-config
    namespace: default

---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
spec:
  gatewayClassName: envoy-gateway
  listeners:
    - name: http
      protocol: HTTP
      port: 80

# kubectl -n envoy-gateway-system port-forward service/${ENVOY_SERVICE} 8000:80 &
# 80 就是 gateway 对外暴露的 port
# curl -H 'Host: www.polarbookstore.com' http://localhost:8000/books
